trunk/TikzEdt/simpletikzParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g 2010-12-10 11:17:16

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class simpletikzParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGIN", "END", "USETIKZLIB", "TIKZSTYLE", "TIKZSET", "NODE", "DRAW", "PATH", "FILL", "LPAR", "RPAR", "LBR", "RBR", "KOMMA", "EQU", "SEMIC", "COLON", "IM_PATH", "IM_NODE", "IM_COORD", "IM_NODENAME", "IM_NUMBERUNIT", "IM_PICTURE", "IM_DOCUMENT", "IM_SCOPE", "IM_STARTTAG", "IM_ENDTAG", "IM_OPTIONS", "IM_OPTION_STYLE", "IM_OPTION_KV", "IM_ID", "IM_TIKZSET", "IM_USETIKZLIB", "IM_STRING", "IM_STYLE", "ID", "FLOAT", "INT", "MATHSTRING", "EXPONENT", "COMMENT", "WS", "ESC_SEQ", "COMMAND", "SOMETHING", "'{'", "'}'", "'node'", "'at'", "'--'", "'edge'", "'->'", "'|-'", "'-|'", "'to'", "'grid'", "'rectangle'", "'+'", "'++'", "'cm'", "'in'", "'ex'", "'mm'", "'pt'", "'tikzpicture'", "'scope'", "'/.style'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int EXPONENT=43;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int IM_STARTTAG=29;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int RBR=16;
    public static final int IM_PATH=21;
    public static final int IM_ID=34;
    public static final int FLOAT=40;
    public static final int SOMETHING=48;
    public static final int ID=39;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int MATHSTRING=42;
    public static final int LBR=15;
    public static final int COMMAND=47;
    public static final int IM_ENDTAG=30;
    public static final int IM_USETIKZLIB=36;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int IM_DOCUMENT=27;
    public static final int T__58=58;
    public static final int ESC_SEQ=46;
    public static final int IM_STRING=37;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int LPAR=13;
    public static final int T__54=54;
    public static final int FILL=12;
    public static final int PATH=11;
    public static final int IM_TIKZSET=35;
    public static final int T__59=59;
    public static final int BEGIN=4;
    public static final int IM_OPTION_KV=33;
    public static final int COMMENT=44;
    public static final int T__50=50;
    public static final int IM_OPTIONS=31;
    public static final int IM_OPTION_STYLE=32;
    public static final int NODE=9;
    public static final int TIKZSTYLE=7;
    public static final int TIKZSET=8;
    public static final int T__49=49;
    public static final int IM_COORD=23;
    public static final int IM_PICTURE=26;
    public static final int INT=41;
    public static final int IM_NODE=22;
    public static final int USETIKZLIB=6;
    public static final int IM_STYLE=38;
    public static final int COLON=20;
    public static final int IM_SCOPE=28;
    public static final int IM_NUMBERUNIT=25;
    public static final int WS=45;
    public static final int T__70=70;
    public static final int KOMMA=17;
    public static final int EQU=18;
    public static final int RPAR=14;
    public static final int END=5;
    public static final int SEMIC=19;
    public static final int IM_NODENAME=24;
    public static final int DRAW=10;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "tikzdocument", "tikzscope", "idd", "tikzpicture_end", 
        "option_style", "tikzscope_end", "edgeop", "tikzpath", "node_start", 
        "squarebr_end", "tikznode", "tikznodei", "tikzpathi", "tikzstring", 
        "squarebr_start", "otherend", "dontcare_body", "coord", "unit", 
        "semicolon_end", "tikzscope_start", "tikzpicture_start", "nodename", 
        "option", "number", "path_start_tag", "tikz_options", "usetikzlib_start", 
        "tikz_styleorset", "iddornumberunit", "tikzbody", "path_start", 
        "option_kv", "tikznodee", "path_end", "tikz_style", "usetikzlib", 
        "coordornode", "tikzpicture", "coord_modifier", "numberunit", "tikz_set_start", 
        "roundbr_end", "tikz_set", "dontcare_preamble", "otherbegin"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public simpletikzParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public simpletikzParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public simpletikzParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return simpletikzParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g"; }


    public static class tikzdocument_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tikzdocument"
    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:88:1: tikzdocument : ( dontcare_preamble | tikz_styleorset | otherbegin )* tikzpicture ( . )* -> ^( IM_DOCUMENT ( tikz_styleorset )* tikzpicture ) ;
    public final simpletikzParser.tikzdocument_return tikzdocument() throws RecognitionException {
        simpletikzParser.tikzdocument_return retval = new simpletikzParser.tikzdocument_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token wildcard5=null;
        simpletikzParser.dontcare_preamble_return dontcare_preamble1 = null;

        simpletikzParser.tikz_styleorset_return tikz_styleorset2 = null;

        simpletikzParser.otherbegin_return otherbegin3 = null;

        simpletikzParser.tikzpicture_return tikzpicture4 = null;


        Object wildcard5_tree=null;
        RewriteRuleSubtreeStream stream_dontcare_preamble=new RewriteRuleSubtreeStream(adaptor,"rule dontcare_preamble");
        RewriteRuleSubtreeStream stream_tikzpicture=new RewriteRuleSubtreeStream(adaptor,"rule tikzpicture");
        RewriteRuleSubtreeStream stream_otherbegin=new RewriteRuleSubtreeStream(adaptor,"rule otherbegin");
        RewriteRuleSubtreeStream stream_tikz_styleorset=new RewriteRuleSubtreeStream(adaptor,"rule tikz_styleorset");
        try { dbg.enterRule(getGrammarFileName(), "tikzdocument");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(88, 1);

        try {
            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:2: ( ( dontcare_preamble | tikz_styleorset | otherbegin )* tikzpicture ( . )* -> ^( IM_DOCUMENT ( tikz_styleorset )* tikzpicture ) )
            dbg.enterAlt(1);

            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:5: ( dontcare_preamble | tikz_styleorset | otherbegin )* tikzpicture ( . )*
            {
            dbg.location(89,5);
            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:5: ( dontcare_preamble | tikz_styleorset | otherbegin )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=4;
                try { dbg.enterDecision(1);

                switch ( input.LA(1) ) {
                case BEGIN:
                    {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==49) ) {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==ID) ) {
                            alt1=3;
                        }


                    }


                    }
                    break;
                case END:
                case USETIKZLIB:
                case NODE:
                case DRAW:
                case PATH:
                case FILL:
                case LPAR:
                case RPAR:
                case LBR:
                case RBR:
                case KOMMA:
                case EQU:
                case SEMIC:
                case COLON:
                case IM_PATH:
                case IM_NODE:
                case IM_COORD:
                case IM_NODENAME:
                case IM_NUMBERUNIT:
                case IM_PICTURE:
                case IM_DOCUMENT:
                case IM_SCOPE:
                case IM_STARTTAG:
                case IM_ENDTAG:
                case IM_OPTIONS:
                case IM_OPTION_STYLE:
                case IM_OPTION_KV:
                case IM_ID:
                case IM_TIKZSET:
                case IM_USETIKZLIB:
                case IM_STRING:
                case IM_STYLE:
                case ID:
                case FLOAT:
                case INT:
                case MATHSTRING:
                case EXPONENT:
                case COMMENT:
                case WS:
                case ESC_SEQ:
                case COMMAND:
                case SOMETHING:
                case 49:
                case 50:
                case 51:
                case 52:
                case 53:
                case 54:
                case 55:
                case 56:
                case 57:
                case 58:
                case 59:
                case 60:
                case 61:
                case 62:
                case 63:
                case 64:
                case 65:
                case 66:
                case 67:
                case 68:
                case 69:
                case 70:
                    {
                    alt1=1;
                    }
                    break;
                case TIKZSTYLE:
                case TIKZSET:
                    {
                    alt1=2;
                    }
                    break;

                }

                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:6: dontcare_preamble
            	    {
            	    dbg.location(89,6);
            	    pushFollow(FOLLOW_dontcare_preamble_in_tikzdocument321);
            	    dontcare_preamble1=dontcare_preamble();

            	    state._fsp--;

            	    stream_dontcare_preamble.add(dontcare_preamble1.getTree());

            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:26: tikz_styleorset
            	    {
            	    dbg.location(89,26);
            	    pushFollow(FOLLOW_tikz_styleorset_in_tikzdocument325);
            	    tikz_styleorset2=tikz_styleorset();

            	    state._fsp--;

            	    stream_tikz_styleorset.add(tikz_styleorset2.getTree());

            	    }
            	    break;
            	case 3 :
            	    dbg.enterAlt(3);

            	    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:44: otherbegin
            	    {
            	    dbg.location(89,44);
            	    pushFollow(FOLLOW_otherbegin_in_tikzdocument329);
            	    otherbegin3=otherbegin();

            	    state._fsp--;

            	    stream_otherbegin.add(otherbegin3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(89,58);
            pushFollow(FOLLOW_tikzpicture_in_tikzdocument334);
            tikzpicture4=tikzpicture();

            state._fsp--;

            stream_tikzpicture.add(tikzpicture4.getTree());
            dbg.location(89,71);
            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:71: ( . )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=BEGIN && LA2_0<=70)) ) {
                    alt2=1;
                }
                else if ( (LA2_0==EOF) ) {
                    alt2=2;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:71: .
            	    {
            	    dbg.location(89,71);
            	    wildcard5=(Token)input.LT(1);
            	    matchAny(input); 
            	    wildcard5_tree = (Object)adaptor.create(wildcard5);
            	    adaptor.addChild(root_0, wildcard5_tree);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}



            // AST REWRITE
            // elements: tikz_styleorset, tikzpicture
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 89:75: -> ^( IM_DOCUMENT ( tikz_styleorset )* tikzpicture )
            {
                dbg.location(89,78);
                // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:78: ^( IM_DOCUMENT ( tikz_styleorset )* tikzpicture )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(89,80);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IM_DOCUMENT, "IM_DOCUMENT"), root_1);

                dbg.location(89,92);
                // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:89:92: ( tikz_styleorset )*
                while ( stream_tikz_styleorset.hasNext() ) {
                    dbg.location(89,92);
                    adaptor.addChild(root_1, stream_tikz_styleorset.nextTree());

                }
                stream_tikz_styleorset.reset();
                dbg.location(89,109);
                adaptor.addChild(root_1, stream_tikzpicture.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(90, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "tikzdocument");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "tikzdocument"

    public static class tikz_styleorset_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tikz_styleorset"
    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:95:1: tikz_styleorset : ( tikz_style | tikz_set );
    public final simpletikzParser.tikz_styleorset_return tikz_styleorset() throws RecognitionException {
        simpletikzParser.tikz_styleorset_return retval = new simpletikzParser.tikz_styleorset_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        simpletikzParser.tikz_style_return tikz_style6 = null;

        simpletikzParser.tikz_set_return tikz_set7 = null;



        try { dbg.enterRule(getGrammarFileName(), "tikz_styleorset");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(95, 1);

        try {
            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:96:2: ( tikz_style | tikz_set )
            int alt3=2;
            try { dbg.enterDecision(3);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==TIKZSTYLE) ) {
                alt3=1;
            }
            else if ( (LA3_0==TIKZSET) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:96:4: tikz_style
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(96,4);
                    pushFollow(FOLLOW_tikz_style_in_tikz_styleorset364);
                    tikz_style6=tikz_style();

                    state._fsp--;

                    adaptor.addChild(root_0, tikz_style6.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:96:17: tikz_set
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(96,17);
                    pushFollow(FOLLOW_tikz_set_in_tikz_styleorset368);
                    tikz_set7=tikz_set();

                    state._fsp--;

                    adaptor.addChild(root_0, tikz_set7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(97, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "tikz_styleorset");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "tikz_styleorset"

    public static class dontcare_preamble_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dontcare_preamble"
    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:99:1: dontcare_preamble : (~ ( BEGIN | TIKZSTYLE | TIKZSET ) )+ ;
    public final simpletikzParser.dontcare_preamble_return dontcare_preamble() throws RecognitionException {
        simpletikzParser.dontcare_preamble_return retval = new simpletikzParser.dontcare_preamble_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set8=null;

        Object set8_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "dontcare_preamble");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(99, 1);

        try {
            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:100:2: ( (~ ( BEGIN | TIKZSTYLE | TIKZSET ) )+ )
            dbg.enterAlt(1);

            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:100:4: (~ ( BEGIN | TIKZSTYLE | TIKZSET ) )+
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(100,4);
            // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:100:4: (~ ( BEGIN | TIKZSTYLE | TIKZSET ) )+
            int cnt4=0;
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4);

                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=END && LA4_0<=USETIKZLIB)||(LA4_0>=NODE && LA4_0<=70)) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:100:5: ~ ( BEGIN | TIKZSTYLE | TIKZSET )
            	    {
            	    dbg.location(100,5);
            	    set8=(Token)input.LT(1);
            	    if ( (input.LA(1)>=END && input.LA(1)<=USETIKZLIB)||(input.LA(1)>=NODE && input.LA(1)<=70) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (Object)adaptor.create(set8));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        dbg.recognitionException(mse);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt4++;
            } while (true);
            } finally {dbg.exitSubRule(4);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(101, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "dontcare_preamble");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "dontcare_preamble"

    public static class otherbegin_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "otherbegin"
    // C:\\Users\\tw\\Documents\\Visual Studio 2010\\Projects\\TikzEdt\\TikzEdt\\simpletikz.g:102:1: otherbegin : BEGIN '{' idd '}' ;
    public final simpletikzParser.otherbegin_return otherbegin() throws RecognitionException {
        simpletikzParser.otherbegin_return retval = new simpletikzParser.otherbegin_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token BEGIN9=null;
        Token char_literal10=null;
        Token char_literal12=null;
        simpletikzParser.idd_return idd11 = null;


        Object BEGIN9_tree=null;
        Object char_literal10_tree=null;
        Object char_literal12_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "otherbegin");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
